0.3.4
- get rid of MoneySelect and MoneyRadioSelect

0.3.3
- fixed Money repr encoding

0.3.2
- added MoneyRadioSelect widget
- fixed null values in MoneySelect

0.3.1
- fixed installation issue

0.3
- use babel for money formatting
- support choices
- use input type="number"
- fixed convertion to float and hashing of Money
- fixed copy/deepcopy of Money

0.2
- added simplistic widget
- support comparing money with non numbers
- fixed precision issue

0.1
Initial working verion