@@ -2,3 +2,4 @@ Django
 pytest
 pytest-django
 pytest-pythonpath
+mock
